开发中 修改样式

--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,9 +1,9 @@
 @charset "utf-8";
 
-$base-color-default: #009688;
+$base-color-default: #79b1f0;
 $base-z-index: 999;
 
-$base-menu-background: #20222a;
+$base-menu-background: #424c5b;
 $base-menu-children-background: #16181d;
 $base-menu-background-active: $base-color-default;
 $base-menu-color: hsla(0, 0%, 100%, 0.95);
