--- a/src/styles/keel-variables.scss
+++ b/src/styles/keel-variables.scss
@@ -5,4 +5,4 @@ $vue-keel-border-radius: 6px;
 $vue-keel-line-height: 15px;
 $vue-keel-spacing: 10px;
 
-@import "~zx-keel/src/styles/keel.scss";
+// @import "~zx-keel/src/styles/keel.scss";
